manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${IMAGE_NAME}-service
#  labels:
#    test: test
#    labele2: label
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    run: ${IMAGE_NAME}
  sessionAffinity: None
  type: ClusterIP
